[project]
name = "t14repythonjupyter"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "skimitaka", email = "sumi.kimitaka.25r@st.kyoto-u.ac.jp" }
]
dependencies = [
    "scipy==1.7.1",
    "numpy==1.21.5",
    "pyserial==3.5",
    "jupyter==1.0.0",
    "opencv-python>=4.10.0.84",
]
readme = "README.md"
requires-python = ">= 3.7"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/t14repythonjupyter"]
